content/_generated-doc/2.7/config/quarkus-security-users-security-users-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-users-security-users-config_quarkus.security.users.file-property-files-realm-configuration]]link:#quarkus-security-users-security-users-config_quarkus.security.users.file-property-files-realm-configuration[Property Files Realm Configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.realm-name]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.realm-name[quarkus.security.users.file.realm-name]`

[.description]
--
The realm name. This is used when generating a hashed password
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.enabled]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.enabled[quarkus.security.users.file.enabled]`

[.description]
--
Determine whether security via the file realm is enabled.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.plain-text]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.plain-text[quarkus.security.users.file.plain-text]`

[.description]
--
If the properties are stored in plain text. If this is false (the default) then it is expected that the passwords are of the form HEX( MD5( username ":" realm ":" password ) )
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.users]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.users[quarkus.security.users.file.users]`

[.description]
--
Classpath resource name of properties file containing user to password mappings. See link:#users-properties[Users.properties].
--|string 
|`users.properties`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.roles]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.roles[quarkus.security.users.file.roles]`

[.description]
--
Classpath resource name of properties file containing user to role mappings. See link:#roles-properties[Roles.properties].
--|string 
|`roles.properties`


h|[[quarkus-security-users-security-users-config_quarkus.security.users.embedded-embedded-realm-configuration]]link:#quarkus-security-users-security-users-config_quarkus.security.users.embedded-embedded-realm-configuration[Embedded Realm Configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.embedded.realm-name]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.embedded.realm-name[quarkus.security.users.embedded.realm-name]`

[.description]
--
The realm name. This is used when generating a hashed password
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.embedded.enabled]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.embedded.enabled[quarkus.security.users.embedded.enabled]`

[.description]
--
Determine whether security via the embedded realm is enabled.
--|boolean 
|`false`

|===