content/_generated-doc/3.6/config/quarkus-security-users-security-users-config.adoc

:summaryTableId: quarkus-security-users-security-users-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-users-security-users-config_quarkus.security.users.file-property-files-realm-configuration]]link:#quarkus-security-users-security-users-config_quarkus.security.users.file-property-files-realm-configuration[Property Files Realm Configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.realm-name]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.realm-name[quarkus.security.users.file.realm-name]`


[.description]
--
The realm name. This is used when generating a hashed password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_FILE_REALM_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_FILE_REALM_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.enabled]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.enabled[quarkus.security.users.file.enabled]`


[.description]
--
Determine whether security via the file realm is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_FILE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_FILE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.plain-text]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.plain-text[quarkus.security.users.file.plain-text]`


[.description]
--
If the properties are stored in plain text. If this is false (the default) then it is expected that the passwords are of the form HEX( MD5( username ":" realm ":" password ) )

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_FILE_PLAIN_TEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_FILE_PLAIN_TEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.users]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.users[quarkus.security.users.file.users]`


[.description]
--
Classpath resource name of properties file containing user to password mappings. See link:#users-properties[Users.properties].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_FILE_USERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_FILE_USERS+++`
endif::add-copy-button-to-env-var[]
--|string 
|`users.properties`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.file.roles]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.file.roles[quarkus.security.users.file.roles]`


[.description]
--
Classpath resource name of properties file containing user to role mappings. See link:#roles-properties[Roles.properties].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_FILE_ROLES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_FILE_ROLES+++`
endif::add-copy-button-to-env-var[]
--|string 
|`roles.properties`


h|[[quarkus-security-users-security-users-config_quarkus.security.users.embedded-embedded-realm-configuration]]link:#quarkus-security-users-security-users-config_quarkus.security.users.embedded-embedded-realm-configuration[Embedded Realm Configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.embedded.realm-name]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.embedded.realm-name[quarkus.security.users.embedded.realm-name]`


[.description]
--
The realm name. This is used when generating a hashed password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_REALM_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_REALM_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-security-users-security-users-config_quarkus.security.users.embedded.enabled]]`link:#quarkus-security-users-security-users-config_quarkus.security.users.embedded.enabled[quarkus.security.users.embedded.enabled]`


[.description]
--
Determine whether security via the embedded realm is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===